gobmkida/c2/dfa_add_string
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dfa_add_string/src/patterns/dfa.c:1661:12: error: expected expression
*( _OWORD *)aux_temp.states[v20 + 1].next = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dfa_add_string/src/patterns/dfa.c:1661:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)aux_temp.states[v20 + 1].next = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dfa_add_string/src/patterns/dfa.c:1701:12: error: expected expression
*( _OWORD *)aux_temp.states[v23].next = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dfa_add_string/src/patterns/dfa.c:1701:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)aux_temp.states[v23].next = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dfa_add_string/src/patterns/dfa.c:1712:30: error: assigning to 'attrib_t' (aka 'struct attrib') from incompatible type 'long long'
aux_temp.indexes[last_index] = 0LL; 
                             ^ ~~~
5 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/dfa_add_string/src/obj/3/dfa.o] Error 1
